--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL='https://admin.toxy.live/api'
+VITE_BASE_URL='https://admin.bigbbang.com/api'
 
 VITE_LOGIN='/user-login'
 VITE_DEMO_LOGIN='/guest-login'
