--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 VITE_BASE_URL='https://admin.bigbbang.com/api'
 
 VITE_LOGIN='/user-login'
+VITE_LOGOUT='/user-logout'
 VITE_DEMO_LOGIN='/guest-login'
 VITE_ACTIVITY_LOG='/activity-log'
 VITE_ACCOUNT_STATEMENT='/account-statement'
