--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "caniuse-lite": "^1.0.30001699",
     "dotenv": "^16.4.5",
     "install": "^0.13.0",
